fix overflow

--- a/src/components/3Dcard/card.scss
+++ b/src/components/3Dcard/card.scss
@@ -36,7 +36,7 @@ $cardWidth: 250px;
 }
 
 .card-box-3d {
-    min-width: calc($cardHeight + 100px);
+    //min-width: calc($cardHeight + 100px);
     width: 100%;
     position: relative;
 
