--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -22,7 +22,7 @@
     }
     @media (max-width: 767.98px) {
         .topics-next {
-            right: 0;
+            right: 17px;
         }
     }
 
@@ -94,7 +94,7 @@
 
 .slider-next {
     .container {
-        right: 0;
+        right: 7px;
     }
 }
 
